@@ -120,6 +120,7 @@ Version 7.4  [ (to be announced) ]
             - New routine hash(), which uses the tight encoding.
         Class Link:
             - New routine makeAlternating().
+            - New routine seifertCircles().
             - New routines countTrivialComponents() and pdAmbiguous(), to help
               understand the limitations of planar diagram codes.
             - New routine hash(), which uses the tight encoding.
